green-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-app-green
  namespace: nginx
spec:
  serviceName: nginx-headless
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      color: green
      enabled: "true"
  template:
    metadata:
      labels:
        app: nginx
        color: green
        enabled: "true"
    spec:
      containers:
      - name: nginx
        image: us-central1-docker.pkg.dev/stm-01/my-app-repo/html-nginx-app:latest
        ports:
        - containerPort: 80
          name: http
