ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
  annotations:
    cloud.google.com/load-balancer-neg-ready: "true"
    cloud.google.com/neg: '{"ingress": true}'
    networking.gke.io/v1beta1.FrontendConfig: "nginx-frontend-config"
    kubernetes.io/ingress.global-static-ip-name: "nginx-ingress-staticip"
spec:
  tls:
  - hosts:
    - nginx-site.profit.net
    secretName: profit-tls
  rules:
  - host: nginx-app.profit.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
